Tests and Logic refined