@@ -1,4 +1,5 @@
 package org.example.utils;
+
 import org.example.model.HexTile;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -12,33 +13,33 @@ import java.util.Map;
 public class TileLoader {
     private static final String TILE_JSON = """
         [
-            {"idTile":0,"leftPath":2,"rightPath":3,"topPath":1},
-            {"idTile":1,"leftPath":2,"rightPath":3,"topPath":5},
-            {"idTile":2,"leftPath":2,"rightPath":3,"topPath":9},
-            {"idTile":3,"leftPath":2,"rightPath":4,"topPath":1},
-            {"idTile":4,"leftPath":2,"rightPath":4,"topPath":5},
-            {"idTile":5,"leftPath":2,"rightPath":4,"topPath":9},
-            {"idTile":6,"leftPath":2,"rightPath":8,"topPath":1},
-            {"idTile":7,"leftPath":2,"rightPath":8,"topPath":5},
-            {"idTile":8,"leftPath":2,"rightPath":8,"topPath":9},
-            {"idTile":9,"leftPath":6,"rightPath":3,"topPath":1},
-            {"idTile":10,"leftPath":6,"rightPath":3,"topPath":5},
-            {"idTile":11,"leftPath":6,"rightPath":3,"topPath":9},
-            {"idTile":12,"leftPath":6,"rightPath":4,"topPath":1},
-            {"idTile":13,"leftPath":6,"rightPath":4,"topPath":5},
-            {"idTile":14,"leftPath":6,"rightPath":4,"topPath":9},
-            {"idTile":15,"leftPath":6,"rightPath":8,"topPath":1},
-            {"idTile":16,"leftPath":6,"rightPath":8,"topPath":5},
-            {"idTile":17,"leftPath":6,"rightPath":8,"topPath":9},
-            {"idTile":18,"leftPath":7,"rightPath":3,"topPath":1},
-            {"idTile":19,"leftPath":7,"rightPath":3,"topPath":5},
-            {"idTile":20,"leftPath":7,"rightPath":3,"topPath":9},
-            {"idTile":21,"leftPath":7,"rightPath":4,"topPath":1},
-            {"idTile":22,"leftPath":7,"rightPath":4,"topPath":5},
-            {"idTile":23,"leftPath":7,"rightPath":4,"topPath":9},
-            {"idTile":24,"leftPath":7,"rightPath":8,"topPath":1},
-            {"idTile":25,"leftPath":7,"rightPath":8,"topPath":5},
-            {"idTile":26,"leftPath":7,"rightPath":8,"topPath":9}
+            {"idTile":0,"topPath":1,"rightPath":3,"leftPath":2},
+            {"idTile":1,"topPath":5,"rightPath":3,"leftPath":2},
+            {"idTile":2,"topPath":9,"rightPath":3,"leftPath":2},
+            {"idTile":3,"topPath":1,"rightPath":4,"leftPath":2},
+            {"idTile":4,"topPath":5,"rightPath":4,"leftPath":2},
+            {"idTile":5,"topPath":9,"rightPath":4,"leftPath":2},
+            {"idTile":6,"topPath":1,"rightPath":8,"leftPath":2},
+            {"idTile":7,"topPath":5,"rightPath":8,"leftPath":2},
+            {"idTile":8,"topPath":9,"rightPath":8,"leftPath":2},
+            {"idTile":9,"topPath":1,"rightPath":3,"leftPath":6},
+            {"idTile":10,"topPath":5,"rightPath":3,"leftPath":6},
+            {"idTile":11,"topPath":9,"rightPath":3,"leftPath":6},
+            {"idTile":12,"topPath":1,"rightPath":4,"leftPath":6},
+            {"idTile":13,"topPath":5,"rightPath":4,"leftPath":6},
+            {"idTile":14,"topPath":9,"rightPath":4,"leftPath":6},
+            {"idTile":15,"topPath":1,"rightPath":8,"leftPath":6},
+            {"idTile":16,"topPath":5,"rightPath":8,"leftPath":6},
+            {"idTile":17,"topPath":9,"rightPath":8,"leftPath":6},
+            {"idTile":18,"topPath":1,"rightPath":3,"leftPath":7},
+            {"idTile":19,"topPath":5,"rightPath":3,"leftPath":7},
+            {"idTile":20,"topPath":9,"rightPath":3,"leftPath":7},
+            {"idTile":21,"topPath":1,"rightPath":4,"leftPath":7},
+            {"idTile":22,"topPath":5,"rightPath":4,"leftPath":7},
+            {"idTile":23,"topPath":9,"rightPath":4,"leftPath":7},
+            {"idTile":24,"topPath":1,"rightPath":8,"leftPath":7},
+            {"idTile":25,"topPath":5,"rightPath":8,"leftPath":7},
+            {"idTile":26,"topPath":9,"rightPath":8,"leftPath":7}
         ]
     """;
 
@@ -50,7 +51,7 @@ public class TileLoader {
             List<Map<String, Integer>> tileData = objectMapper.readValue(TILE_JSON, new TypeReference<>() {});
             tileDeck.clear();
             for (Map<String, Integer> data : tileData) {
-                tileDeck.add(new HexTile(data.get("leftPath"), data.get("rightPath"), data.get("topPath")));
+                tileDeck.add(new HexTile(data.get("topPath"), data.get("rightPath"), data.get("leftPath")));
             }
             Collections.shuffle(tileDeck);
         } catch (IOException e) {
@@ -60,7 +61,7 @@ public class TileLoader {
 
     public static HexTile drawTile() {
         if (!tileDeck.isEmpty()) {
-            return tileDeck.removeFirst();
+            return tileDeck.remove(0); // 🔹 Fixato il bug removeFirst() → remove(0)
         }
         return null;
     }
@@ -68,6 +69,4 @@ public class TileLoader {
     public static int getRemainingTiles() {
         return tileDeck.size();
     }
-
-
 }
